test/ui/type-mismatch-defaulted-declaration-type.lushui
;;; FIXME: Improve the error message. Explain that `X = ...` means `X: Type = ...`.
;;;        Find a better name for this test, too!

Ty = 0
